[gd_scene load_steps=4 format=2]

[ext_resource path="res://Actors/Dash/Dash.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Player/Dash.ogg" type="AudioStream" id=2]
[ext_resource path="res://Actors/AudioPlayer/AudioPlayer.tscn" type="PackedScene" id=3]

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="Dash" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 2 )
volume_db = 5.0
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
